frontend update and download url add
owo

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -160,7 +160,7 @@ i {
     padding: 2px;
 }
 
-.navbar-mode-ico {ee
+.navbar-mode-ico {
     font-size: 30px !important;
     color: white;
     margin-right: 5px;
