--- a/templates/main.html
+++ b/templates/main.html
@@ -80,100 +80,9 @@
             </div>
             <div class="ui-main-block">
                 <div class="beatmap-row">
-                    <div class="beatmap-block" v-for="i in list">
-                        <div class="beatmap-single">
-                            <div class="beatmap-bg-default"></div>
-                            <a :href="'/s/' + i.SetID" :id="i.SetID" class="cardheader ranked"
-                                :style="'background-image: url(https://assets.ppy.sh/beatmaps/' + i.SetID + '/covers/card.jpg);'">
-                                <div>
-                                    <div class="song-status">
-                                        <i :class="'fas fa-' + convertRankedStatusToico(i.RankedStatus)"></i>
-                                    </div>
-                                </div>
-                                <div class="d-flex flex-column">
-                                    <span class="beatmap songname title"> <% i.Title %></span>
-                                    <span class="beatmap songname creator">by <% i.Artist %></span>
-                                </div>
-                            </a>
-                            <div class="beatmapset-preview-elapsed-bar "></div>
-                            <div class="info">
-                                <div class="desc">
-                                    mapped by <a class="song-author-name"> <% i.Creator %></a>
-                                </div>
-                                <div class="beatmap-download-btn">
-                                    <a :href="'/d/' + i.SetID" class="download-icon">
-                                        <i class="fa fa-download"></i>
-                                    </a>
-                                </div>
-                            </div>
-                            <div class="more-info">
-                                <div class="song-stats-block">
-                                    <el-tooltip class="item" effect="dark" content="Favorites count" placement="bottom">
-                                        <div class="song-stats">
-                                            <i class="fas fa-heart"></i> <% addCommas(i.Favourites) %>
-                                        </div>
-                                    </el-tooltip>
-                                    <el-tooltip class="item" effect="dark" content="Play count" placement="bottom">
-                                        <div class="song-stats">
-                                            <i class="fas fa-play-circle"></i> 123456
-                                        </div>
-                                    </el-tooltip>
-                                    <el-tooltip class="item" effect="dark" content="BPM" placement="bottom">
-                                        <div class="song-stats">
-                                            <i class="fas fa-music"></i> 185♪
-                                        </div>
-                                    </el-tooltip>
-                                </div>
-                            </div>
-                            <div class="version-list">
-                                <el-tooltip placement="top" v-for="ii in i.ChildrenBeatmaps">
-                                    <div slot="content" class="beatmap-tooltip">
-                                        <b><% ii.DiffName %></b>
-                                        <br/>
-                                        <div v-if="ii.DifficultyRating < 2">
-                                            <span class="easy beatmap-diff-text"><% addCommas((ii.DifficultyRating).toFixed(2)) %> <i class="fas fa-star"></i></span>
-                                        </div>
-                                        <div v-else-if="(ii.DifficultyRating < 2.7) && (ii.DifficultyRating > 1.99)">
-                                            <span class="normal beatmap-diff-text"><% addCommas((ii.DifficultyRating).toFixed(2)) %> <i class="fas fa-star"></i></span>
-                                        </div>
-                                        <div v-else-if="(ii.DifficultyRating < 4) && (ii.DifficultyRating > 2.69)">
-                                            <span class="hard beatmap-diff-text"><% addCommas((ii.DifficultyRating).toFixed(2)) %> <i class="fas fa-star"></i></span>
-                                        </div>
-                                        <div v-else-if="(ii.DifficultyRating < 5.3) && (ii.DifficultyRating > 3.99)">
-                                            <span class="insane beatmap-diff-text"><% addCommas((ii.DifficultyRating).toFixed(2)) %> <i class="fas fa-star"></i></span>
-                                        </div>
-                                        <div v-else-if="(ii.DifficultyRating < 6.5) && (ii.DifficultyRating > 5.29)">
-                                            <span class="expert beatmap-diff-text"><% addCommas((ii.DifficultyRating).toFixed(2)) %> <i class="fas fa-star"></i></span>
-                                        </div>
-                                        <div v-else-if="ii.DifficultyRating > 6.49">
-                                            <span class="expertplus beatmap-diff-text"><% addCommas((ii.DifficultyRating).toFixed(2)) %> <i class="fas fa-star"></i></span>
-                                        </div>
-                                    </div>
-                                    <div v-if="ii.DifficultyRating < 2">
-                                        <i class="mode-ico faa fa-extra-mode-osu easy"></i>
-                                    </div>
-                                    <div v-else-if="(ii.DifficultyRating < 2.7) && (ii.DifficultyRating > 1.99)">
-                                        <i class="mode-ico faa fa-extra-mode-osu normal"></i>
-                                    </div>
-                                    <div v-else-if="(ii.DifficultyRating < 4) && (ii.DifficultyRating > 2.69)">
-                                        <i class="mode-ico faa fa-extra-mode-osu hard"></i>
-                                    </div>
-                                    <div v-else-if="(ii.DifficultyRating < 5.3) && (ii.DifficultyRating > 3.99)">
-                                        <i class="mode-ico faa fa-extra-mode-osu insane"></i>
-                                    </div>
-                                    <div v-else-if="(ii.DifficultyRating < 6.5) && (ii.DifficultyRating > 5.29)">
-                                        <i class="mode-ico faa fa-extra-mode-osu expert"></i>
-                                    </div>
-                                    <div v-else-if="ii.DifficultyRating > 6.49">
-                                        <i class="mode-ico faa fa-extra-mode-osu expertplus"></i>
-                                    </div>
-                                </el-tooltip>
-                            </div>
-                        </div>
-                        <span class="beatmapset-panel-prev beatmapset-panel__play">
-                            <span class="fa fa-play"></span>
-                        </span>
-                    </div>
+                    <template v-for="(i, index) in list" v-bind:key="i.id">
+                        <beatmap :beatmap="i"></beatmap>
+                    </template>
                 </div>
             </div>
 
@@ -185,12 +94,9 @@
     <script src="/static/vue_modules/vue-axios-plugin.min.js"></script>
     <script src="/static/vue_modules/vue-timeago.min.js"></script>
     <script src="/static/vue/mixins/generalMixins.js?14882020"></script>
-    <script src="/static/vue/pages/beatmaps.js"></script>
+    <script src="/static/vue/pages/index.js"></script>
+    <script src="/static/vue/pages/beatmap.js"></script>
     <script src="https://unpkg.com/element-ui/lib/index.js"></script>
-    <script>
-        var elements = document.querySelectorAll('.sticky');
-        Stickyfill.add(elements);
-    </script>
 </body>
 
 </html>
