--- a/templates/main.html
+++ b/templates/main.html
@@ -3,8 +3,42 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Nerina beatmap mirror</title>
+    <title>NeriNyan: osu! beatmap mirror</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta property="og:title" content="NeriNyan: osu! Beatmap Mirror">
+    <link rel="canonical" href="https://nerina.pw/">
+    <link rel="alternate" href="https://nerina.pw/">
+    <meta property="og:url" content="https://nerina.pw/">
+    <meta property="og:site_name" content="NeriNyan: osu! Beatmap Mirror">
+    <meta property="og:type" content="website">
+    <meta name="Subject" content="osu! Beatmap Mirror">
+    <meta name="Publisher" content="osu! Beatmap Mirror">
+    <meta name="description" content="osu! beatmap mirror by nerina">
+    <meta name="keywords"
+        content="osu!,오스,beatmap,osu! beatmap, osu! mirror, bloodcat, beatconnect, nerina, osu! beatmap mirror, mirror, beatmap mirror, cookiezi">
+    <meta name="author" content="Nerina">
+    <meta name="Location" content="South Korea">
+    <meta property="article:tag" content="osu!">
+    <meta property="article:tag" content="osu! beatmap mirror">
+    <meta property="article:tag" content="osu! beatmap">
+    <meta property="article:tag" content="osu! beatmap download">
+    <meta property="article:tag" content="osu! mirror">
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-PZPLP7ZRTL"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+
+        gtag('config', 'G-PZPLP7ZRTL');
+    </script>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css"
+        integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="/static/css/index.css?1214153123">
 </head>
 
 <body>
@@ -12,23 +46,114 @@
         현재 사용 중인 브라우저는 스크립트를 지원하지 않거나, 해당 기능이 활성화되어 있지 않습니다!
     </noscript>
     <script>
+        var creator = {{ creator }};
+        var m = '{{ mode }}';
+        var s = '{{ status }}';
+        var q = '{{ query }}';
         var scrptloadchk = 0;
     </script>
-    <div id="app" v-bind:class="{ 'load' : load }">
-        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css"
-            integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
-        <link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css">
-        <link rel="stylesheet" type="text/css" href="/static/css/index.css">
+    <div id="app">
+        <el-col class="loading" :span="24" v-bind:class="{ 'load' : load }">
+            <div class="artboard">
+                <div class="domino">
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                </div>
+            </div>
+        </el-col>
         <div class="ui container" id="main-form">
+            <div class="ui-navbar-block">
+                <el-row class="navbar logo">
+                    <el-col :span="24">
+                        <div class="navbar-search-box">
+                            <a href="/main" class="logo">NeriNyan: osu! Beatmap Mirror</a>
+                            <a href="https://discordapp.com/users/637921223312932895/" class="nav-logo right"><i
+                                    class="fab fa-discord"></i></a>
+                            <a href="mailto:nerina@debian.moe" class="nav-logo2 right">DMCA</i></a>
+                        </div>
+                    </el-col>
+                </el-row>
+            </div>
             <div class="sticky">
                 <div class="ui-navbar-block">
-                    <el-row class="navbar search">
+                    <el-row class="navbar search" :style="activeSearchDetails == '0' ? '' : 'display: none'">
                         <el-col :span="24">
                             <div class="navbar-search-box">
                                 <i class="fas fa-search navbar-search-icon"></i>
-                                <el-input class="navbar-search-input" placeholder="Search..." v-model="search_query"></el-input>
+                                <el-input class="navbar-search-input dark" placeholder="Search..."
+                                    v-model="search_query"></el-input>
                             </div>
                         </el-col>
+                    </el-row>
+                    <el-row class="more-search">
+                        <el-collapse v-model="activeSearchDetails">
+                            <el-collapse-item title="Advanced search" name="1">
+                                <el-form class="advanced-search-block" ref="form" :model="form" label-width="120px">
+                                    <dlv class="form-inline">
+                                        <el-form-item label="Song Title">
+                                            <el-input v-model="form.title" class="form-inline-input"></el-input>
+                                        </el-form-item>
+                                        <el-form-item label="Song Artist">
+                                            <el-input v-model="form.artist" class="form-inline-input"></el-input>
+                                        </el-form-item>
+                                    </dlv>
+                                    <el-form-item label="Creator">
+                                        <el-input v-model="form.creator" class="form-inline-input"></el-input>
+                                    </el-form-item>
+                                    <dlv class="form-inline">
+                                        <el-form-item label="sort by">
+                                            <el-select v-model="form.sort" placeholder="Please Select...">
+                                                <el-option label="Last updated" value="set_last_updated"></el-option>
+                                                <el-option label="Ranked Date" value="set_ranked_date"></el-option>
+                                                <el-option label="Submitted Date" value="set_submitted_date">
+                                                </el-option>
+                                                <el-option label="BeatmapSet ID" value="set_id"></el-option>
+                                                <el-option label="Song Length" value="total_length"></el-option>
+                                                <el-option label="Title" value="title"></el-option>
+                                                <el-option label="Artist" value="artist"></el-option>
+                                            </el-select>
+                                            <el-radio-group v-model="form.sort2" class="form-margin">
+                                                <el-radio label="Ascending" value="asc"></el-radio>
+                                                <el-radio label="Descending" value="desc"></el-radio>
+                                            </el-radio-group>
+                                        </el-form-item>
+                                    </dlv>
+                                    <dlv class="form-inline fr4">
+                                        <el-form-item label="CS">
+                                            <el-slider v-model="form.cs" range :format-tooltip="formatadvenceSearch">
+                                            </el-slider>
+                                        </el-form-item>
+                                        <el-form-item label="AR">
+                                            <el-slider v-model="form.ar" range :format-tooltip="formatadvenceSearch">
+                                            </el-slider>
+                                        </el-form-item>
+                                        <el-form-item label="OD">
+                                            <el-slider v-model="form.od" range :format-tooltip="formatadvenceSearch">
+                                            </el-slider>
+                                        </el-form-item>
+                                        <el-form-item label="HP">
+                                            <el-slider v-model="form.hp" range :format-tooltip="formatadvenceSearch">
+                                            </el-slider>
+                                        </el-form-item>
+                                    </dlv>
+                                    <dlv class="form-inline fr2">
+                                        <el-form-item label="BPM">
+                                            <el-slider v-model="form.bpm" :max="360" range></el-slider>
+                                        </el-form-item>
+                                        <el-form-item label="Length">
+                                            <el-slider v-model="form.length" range :max="1000"
+                                                :format-tooltip="formlength"></el-slider>
+                                        </el-form-item>
+                                    </dlv>
+                                    <div class="search-btn">
+                                        <el-button type="primary" @click="onSubmit" style="width: 100%;">Search
+                                        </el-button>
+                                    </div>
+                                </el-form>
+                            </el-collapse-item>
+                        </el-collapse>
                     </el-row>
                     <el-row>
                         <el-col :span="24" class="navbar-block">
@@ -36,11 +161,6 @@
                                 <el-tooltip class="item" effect="dark" content="osu! Standard" placement="bottom">
                                     <el-menu-item index="0" class="navbar item">
                                         <i class="navbar-mode-ico faa fa-extra-mode-osu"></i>
-                                    </el-menu-item>
-                                </el-tooltip>
-                                <el-tooltip class="item" effect="dark" content="osu! Mania" placement="bottom">
-                                    <el-menu-item index="3" class="navbar item">
-                                        <i class="navbar-mode-ico faa fa-extra-mode-mania"></i>
                                     </el-menu-item>
                                 </el-tooltip>
                                 <el-tooltip class="item" effect="dark" content="osu! Taiko" placement="bottom">
@@ -53,8 +173,17 @@
                                         <i class="navbar-mode-ico faa fa-extra-mode-fruits"></i>
                                     </el-menu-item>
                                 </el-tooltip>
+                                <el-tooltip class="item" effect="dark" content="osu! Mania" placement="bottom">
+                                    <el-menu-item index="3" class="navbar item">
+                                        <i class="navbar-mode-ico faa fa-extra-mode-mania"></i>
+                                    </el-menu-item>
+                                </el-tooltip>
+                                <el-menu-item index="-1" class="navbar item">
+                                    ALL
+                                </el-menu-item>
                             </el-menu>
-                            <el-menu :default-active="rank" class="navbar right" mode="horizontal" @select="chnageRankedStatus">
+                            <el-menu :default-active="rank" class="navbar right" mode="horizontal"
+                                @select="chnageRankedStatus">
                                 <el-tooltip class="item" effect="dark" content="Ranked" placement="bottom">
                                     <el-menu-item index="1" class="navbar item">
                                         <i class="fas fa-angle-double-up ranked"></i>
@@ -75,11 +204,14 @@
                                         <i class="fas fa-question unranked"></i>
                                     </el-menu-item>
                                 </el-tooltip>
-                                <el-menu-item index="-3" class="navbar item">Any</el-menu-item>
+                                <el-menu-item index="-3" class="navbar item">All</el-menu-item>
                             </el-menu>
                         </el-col>
                     </el-row>
                 </div>
+                <el-alert title="This site is currently under development." type="warning"
+                    description="이 사이트는 현재 개발 진행중입니다. ver. B20210119" show-icon effect="dark">
+                </el-alert>
             </div>
             <div class="ui-main-block">
                 <div class="beatmap-row">
@@ -95,15 +227,16 @@
     <script src="/static/vue_modules/vue-axios-plugin.min.js" onload="scrptloadchk += 1;"></script>
     <script src="/static/vue_modules/vue-timeago.min.js" onload="scrptloadchk += 1;"></script>
     <script src="/static/vue/mixins/generalMixins.js?14882020" onload="scrptloadchk += 1;"></script>
-    <script src="/static/vue/pages/index.js" onload="scrptloadchk += 1;"></script>
+    <script src="/static/vue/pages/index.js?1" onload="scrptloadchk += 1;"></script>
     <script src="/static/vue/pages/beatmap.js" onload="scrptloadchk += 1;"></script>
     <script src="https://unpkg.com/element-ui/lib/index.js" onload="scrptloadchk += 1;"></script>
     <script>
         setTimeout(CheckLoadScript, 1000);
+
         function CheckLoadScript() {
-            if(scrptloadchk != 8) { 
+            if (scrptloadchk != 8) {
                 window.location.replace(window.location.pathname + window.location.search + window.location.hash);
-            } 
+            }
         }
     </script>
 </body>
