--- a/templates/main.html
+++ b/templates/main.html
@@ -20,6 +20,7 @@
         content="osu!,오스,beatmap,osu! beatmap, osu! mirror, bloodcat, beatconnect, nerina, osu! beatmap mirror, mirror, beatmap mirror, cookiezi">
     <meta name="author" content="Nerina">
     <meta name="Location" content="South Korea">
+    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
     <meta property="article:tag" content="osu!">
     <meta property="article:tag" content="osu! beatmap mirror">
     <meta property="article:tag" content="osu! beatmap">
