--- a/templates/main.html
+++ b/templates/main.html
@@ -39,7 +39,7 @@
     </script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css"
         integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="/static/css/index.css?1214153123">
+    <link rel="stylesheet" type="text/css" href="/static/css/index.min.css">
 </head>
 
 <body>
@@ -76,86 +76,86 @@
                         </div>
                     </el-col>
                 </el-row>
+                <el-row class="navbar search" :style="activeSearchDetails == '0' ? '' : 'display: none'">
+                    <el-col :span="24">
+                        <div class="navbar-search-box">
+                            <i class="fas fa-search navbar-search-icon"></i>
+                            <el-input class="navbar-search-input dark" placeholder="Search..."
+                                v-model="search_query"></el-input>
+                        </div>
+                    </el-col>
+                </el-row>
+                <el-row class="more-search">
+                    <el-collapse v-model="activeSearchDetails">
+                        <el-collapse-item title="Advanced search (Beta)" name="1">
+                            <el-form class="advanced-search-block" ref="form" :model="form" label-width="120px">
+                                <dlv class="form-inline">
+                                    <el-form-item label="Song Title">
+                                        <el-input v-model="form.title" class="form-inline-input"></el-input>
+                                    </el-form-item>
+                                    <el-form-item label="Song Artist">
+                                        <el-input v-model="form.artist" class="form-inline-input"></el-input>
+                                    </el-form-item>
+                                </dlv>
+                                <el-form-item label="Creator">
+                                    <el-input v-model="form.creator" class="form-inline-input"></el-input>
+                                </el-form-item>
+                                <dlv class="form-inline">
+                                    <el-form-item label="sort by">
+                                        <el-select v-model="form.sort" placeholder="Please Select...">
+                                            <el-option label="Last updated" value="set_last_updated"></el-option>
+                                            <el-option label="Ranked Date" value="set_ranked_date"></el-option>
+                                            <el-option label="Submitted Date" value="set_submitted_date">
+                                            </el-option>
+                                            <el-option label="BeatmapSet ID" value="set_id"></el-option>
+                                            <el-option label="Song Length" value="total_length"></el-option>
+                                            <el-option label="Title" value="title"></el-option>
+                                            <el-option label="Artist" value="artist"></el-option>
+                                        </el-select>
+                                        <el-radio-group v-model="form.sort2" class="form-margin">
+                                            <el-radio label="Ascending" value="asc"></el-radio>
+                                            <el-radio label="Descending" value="desc"></el-radio>
+                                        </el-radio-group>
+                                    </el-form-item>
+                                </dlv>
+                                <dlv class="form-inline fr4">
+                                    <el-form-item label="CS">
+                                        <el-slider v-model="form.cs" range :format-tooltip="formatadvenceSearch">
+                                        </el-slider>
+                                    </el-form-item>
+                                    <el-form-item label="AR">
+                                        <el-slider v-model="form.ar" range :format-tooltip="formatadvenceSearch">
+                                        </el-slider>
+                                    </el-form-item>
+                                    <el-form-item label="OD">
+                                        <el-slider v-model="form.od" range :format-tooltip="formatadvenceSearch">
+                                        </el-slider>
+                                    </el-form-item>
+                                    <el-form-item label="HP">
+                                        <el-slider v-model="form.hp" range :format-tooltip="formatadvenceSearch">
+                                        </el-slider>
+                                    </el-form-item>
+                                </dlv>
+                                <dlv class="form-inline fr2">
+                                    <el-form-item label="BPM">
+                                        <el-slider v-model="form.bpm" :max="360" range></el-slider>
+                                    </el-form-item>
+                                    <el-form-item label="Length">
+                                        <el-slider v-model="form.length" range :max="1000"
+                                            :format-tooltip="formlength"></el-slider>
+                                    </el-form-item>
+                                </dlv>
+                                <div class="search-btn">
+                                    <el-button type="primary" @click="onSubmit" style="width: 100%;">Search
+                                    </el-button>
+                                </div>
+                            </el-form>
+                        </el-collapse-item>
+                    </el-collapse>
+                </el-row>
             </div>
             <div class="sticky">
                 <div class="ui-navbar-block">
-                    <el-row class="navbar search" :style="activeSearchDetails == '0' ? '' : 'display: none'">
-                        <el-col :span="24">
-                            <div class="navbar-search-box">
-                                <i class="fas fa-search navbar-search-icon"></i>
-                                <el-input class="navbar-search-input dark" placeholder="Search..."
-                                    v-model="search_query"></el-input>
-                            </div>
-                        </el-col>
-                    </el-row>
-                    <el-row class="more-search">
-                        <el-collapse v-model="activeSearchDetails">
-                            <el-collapse-item title="Advanced search" name="1">
-                                <el-form class="advanced-search-block" ref="form" :model="form" label-width="120px">
-                                    <dlv class="form-inline">
-                                        <el-form-item label="Song Title">
-                                            <el-input v-model="form.title" class="form-inline-input"></el-input>
-                                        </el-form-item>
-                                        <el-form-item label="Song Artist">
-                                            <el-input v-model="form.artist" class="form-inline-input"></el-input>
-                                        </el-form-item>
-                                    </dlv>
-                                    <el-form-item label="Creator">
-                                        <el-input v-model="form.creator" class="form-inline-input"></el-input>
-                                    </el-form-item>
-                                    <dlv class="form-inline">
-                                        <el-form-item label="sort by">
-                                            <el-select v-model="form.sort" placeholder="Please Select...">
-                                                <el-option label="Last updated" value="set_last_updated"></el-option>
-                                                <el-option label="Ranked Date" value="set_ranked_date"></el-option>
-                                                <el-option label="Submitted Date" value="set_submitted_date">
-                                                </el-option>
-                                                <el-option label="BeatmapSet ID" value="set_id"></el-option>
-                                                <el-option label="Song Length" value="total_length"></el-option>
-                                                <el-option label="Title" value="title"></el-option>
-                                                <el-option label="Artist" value="artist"></el-option>
-                                            </el-select>
-                                            <el-radio-group v-model="form.sort2" class="form-margin">
-                                                <el-radio label="Ascending" value="asc"></el-radio>
-                                                <el-radio label="Descending" value="desc"></el-radio>
-                                            </el-radio-group>
-                                        </el-form-item>
-                                    </dlv>
-                                    <dlv class="form-inline fr4">
-                                        <el-form-item label="CS">
-                                            <el-slider v-model="form.cs" range :format-tooltip="formatadvenceSearch">
-                                            </el-slider>
-                                        </el-form-item>
-                                        <el-form-item label="AR">
-                                            <el-slider v-model="form.ar" range :format-tooltip="formatadvenceSearch">
-                                            </el-slider>
-                                        </el-form-item>
-                                        <el-form-item label="OD">
-                                            <el-slider v-model="form.od" range :format-tooltip="formatadvenceSearch">
-                                            </el-slider>
-                                        </el-form-item>
-                                        <el-form-item label="HP">
-                                            <el-slider v-model="form.hp" range :format-tooltip="formatadvenceSearch">
-                                            </el-slider>
-                                        </el-form-item>
-                                    </dlv>
-                                    <dlv class="form-inline fr2">
-                                        <el-form-item label="BPM">
-                                            <el-slider v-model="form.bpm" :max="360" range></el-slider>
-                                        </el-form-item>
-                                        <el-form-item label="Length">
-                                            <el-slider v-model="form.length" range :max="1000"
-                                                :format-tooltip="formlength"></el-slider>
-                                        </el-form-item>
-                                    </dlv>
-                                    <div class="search-btn">
-                                        <el-button type="primary" @click="onSubmit" style="width: 100%;">Search
-                                        </el-button>
-                                    </div>
-                                </el-form>
-                            </el-collapse-item>
-                        </el-collapse>
-                    </el-row>
                     <el-row>
                         <el-col :span="24" class="navbar-block">
                             <el-menu :default-active="mode" class="navbar left" mode="horizontal" @select="chnageMode">
@@ -224,11 +224,11 @@
         </div>
     </div>
     <script src="/static/js/jquery.min.js" onload="scrptloadchk += 1;"></script>
-    <script src="/static/vue_modules/vue.js" onload="scrptloadchk += 1;"></script>
+    <script src="/static/vue_modules/vue.min.js" onload="scrptloadchk += 1;"></script>
     <script src="/static/vue_modules/vue-axios-plugin.min.js" onload="scrptloadchk += 1;"></script>
     <script src="/static/vue_modules/vue-timeago.min.js" onload="scrptloadchk += 1;"></script>
-    <script src="/static/vue/mixins/generalMixins.js?14882020" onload="scrptloadchk += 1;"></script>
-    <script src="/static/vue/pages/index.js?1" onload="scrptloadchk += 1;"></script>
+    <script src="/static/vue/mixins/generalMixins.min.js" onload="scrptloadchk += 1;"></script>
+    <script src="/static/vue/pages/index.min.js" onload="scrptloadchk += 1;"></script>
     <script src="/static/vue/pages/beatmap.js" onload="scrptloadchk += 1;"></script>
     <script src="https://unpkg.com/element-ui/lib/index.js" onload="scrptloadchk += 1;"></script>
     <script>
