Balence? Typo LooooooL

--- a/templates/main.html
+++ b/templates/main.html
@@ -228,7 +228,7 @@
     <script src="/static/vue_modules/vue-axios-plugin.min.js" onload="scrptloadchk += 1;"></script>
     <script src="/static/vue_modules/vue-timeago.min.js" onload="scrptloadchk += 1;"></script>
     <script src="/static/vue/mixins/generalMixins.min.js" onload="scrptloadchk += 1;"></script>
-    <script src="/static/vue/pages/index.min.js" onload="scrptloadchk += 1;"></script>
+    <script src="/static/vue/pages/index.js" onload="scrptloadchk += 1;"></script>
     <script src="/static/vue/pages/beatmap.js" onload="scrptloadchk += 1;"></script>
     <script src="https://unpkg.com/element-ui/lib/index.js" onload="scrptloadchk += 1;"></script>
     <script>
