--- a/static/css/index.css
+++ b/static/css/index.css
@@ -6018,6 +6018,18 @@ a {
     justify-content: center
 }
 
+.el-alert__icon.el-icon-info.is-big {
+    color: #1f350d;
+}
+
+.el-alert__title.is-bold {
+    color: white;
+}
+
+.el-alert.el-alert--Success.is-dark {
+    background-color: #5ca26b;
+}
+
 .el-alert--success.is-light {
     background-color: #f0f9eb;
     color: #67C23A
@@ -16619,6 +16631,62 @@ span.beatmap.songname.title {
     display: grid !important;
 }
 
+.loading_block {
+    width: 100%;
+    height: 8vh;
+}
+
+.loadingWrap{
+    margin: 0 auto;
+    position: relative;
+    display: block;
+    padding: 0 0 32px 0;
+    background: linear-gradient(0deg, #080808eb, #282c2f);
+}
+
+.loading_block div.loadingBall {
+    position: relative;
+    display: block;
+    height: 100px;
+    width: 32px;
+    margin: 0 auto;
+}
+
+.loading_block div.loadingBall:before {
+    position: relative;
+    content: "";
+    display: block;
+    top: 0;
+    width: 32px;
+    height: 32px;
+    border-radius: 50%;
+    background-color: #fbae18;
+    transform-origin: 50%;
+    animation: bounce 500ms alternate infinite ease;
+}
+
+@keyframes bounce {
+    0% {
+        top: 100px;
+        height: 5px;
+        border-radius: 60px 60px 20px 20px;
+        transform: scaleX(2);
+    }
+    35% {
+        height: 32px;
+        border-radius: 50%;
+        transform: scaleX(1);
+    }
+    100% {
+        top: 0;
+    }
+}
+
+.loading_block div.loadingText {
+    display: inline-block;
+    color: white;
+    margin-left: 10px;
+}
 
 .artboard {
     width: 100%;
